<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textomarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/marca"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spiner"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/textoNombre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/imagen"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/textoURL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/textodescripcion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/precio"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/textoPrecio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:text=""
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/contenedorBotton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:id="@+id/botonEnviar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/send"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

</LinearLayout>