<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="80dp">

            <ImageView
                android:id="@+id/noimagen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/modeloCaracteristicas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />


            <ImageView
                android:id="@+id/logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="top|start"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp" />

        </FrameLayout>


        <TextView
            android:id="@+id/nombreMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:padding="5dp"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/nombreModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:padding="5dp"
                android:text="@string/precio"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text=" €"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:padding="5dp"
                android:text="@string/pais"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nombrePais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:padding="5dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif"
                android:padding="5dp"
                android:paddingBottom="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>